// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test FileUpload should display a success message when uploadCheckStatus.success is truthy 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  id="fileType"
                  value="csv"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="vertical-flex"
      >
        <div
          class="flex-display"
        >
          <span
            class="ant-upload-wrapper"
          >
            <div
              class="ant-upload ant-upload-select"
            >
              <span
                class="ant-upload"
                role="button"
                tabindex="0"
              >
                <input
                  accept=""
                  style="display: none;"
                  type="file"
                />
                <button
                  class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                  type="button"
                >
                  <span>
                    选择文件上传
                  </span>
                </button>
              </span>
            </div>
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              下载导入模板
            </span>
          </button>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                class="custom-icon"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m-.665-2.666L4.507 7.838l.942-.943 1.886 1.886 3.771-3.771.943.943z"
                  fill="#1CB889"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-success"
            >
              <pre>
                校验通过
              </pre>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`test FileUpload should display an error message when uploadCheckStatus.errorMessage is present 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  id="fileType"
                  value="csv"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="vertical-flex"
      >
        <div
          class="flex-display"
        >
          <span
            class="ant-upload-wrapper"
          >
            <div
              class="ant-upload ant-upload-select"
            >
              <span
                class="ant-upload"
                role="button"
                tabindex="0"
              >
                <input
                  accept=""
                  style="display: none;"
                  type="file"
                />
                <button
                  class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                  type="button"
                >
                  <span>
                    选择文件上传
                  </span>
                </button>
              </span>
            </div>
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              下载导入模板
            </span>
          </button>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                class="custom-icon"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                  fill="#F66074"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-danger"
            >
              <pre>
                error message
              </pre>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
</body>
`;

exports[`test FileUpload should render the DownloadTemplateModal component when downloadTemplateModalVisibility is true 1`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  id="fileType"
                  value="csv"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="vertical-flex"
      >
        <div
          class="flex-display"
        >
          <span
            class="ant-upload-wrapper"
          >
            <div
              class="ant-upload ant-upload-select"
            >
              <span
                class="ant-upload"
                role="button"
                tabindex="0"
              >
                <input
                  accept=""
                  style="display: none;"
                  type="file"
                />
                <button
                  class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                  type="button"
                >
                  <span>
                    选择文件上传
                  </span>
                </button>
              </span>
            </div>
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              下载导入模板
            </span>
          </button>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                class="custom-icon"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                  fill="#F66074"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-danger"
            >
              <pre>
                error message
              </pre>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                下载导入模板
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item has-required-style css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="dbType"
                        title="数据源类型"
                      >
                        数据源类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="dbType_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="dbType_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="dbType_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="dbType"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                type="button"
              >
                <span>
                  取 消
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
                type="button"
              >
                <span>
                  下 载
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test FileUpload should render the DownloadTemplateModal component when downloadTemplateModalVisibility is true 2`] = `
<body>
  <div />
  <div>
    <form
      class="ant-form ant-form-horizontal"
    >
      <div
        class="ant-form-item"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <input
                  id="fileType"
                  value="csv"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="vertical-flex"
      >
        <div
          class="flex-display"
        >
          <span
            class="ant-upload-wrapper"
          >
            <div
              class="ant-upload ant-upload-select"
            >
              <span
                class="ant-upload"
                role="button"
                tabindex="0"
              >
                <input
                  accept=""
                  style="display: none;"
                  type="file"
                />
                <button
                  class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                  type="button"
                >
                  <span>
                    选择文件上传
                  </span>
                </button>
              </span>
            </div>
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              下载导入模板
            </span>
          </button>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                class="custom-icon"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                  fill="#F66074"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-danger"
            >
              <pre>
                error message
              </pre>
            </span>
          </div>
        </div>
      </div>
    </form>
  </div>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-wrap"
        style="display: none;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px; transform-origin: NaNpx NaNpx; display: none;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                下载导入模板
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-horizontal"
              >
                <div
                  class="ant-form-item has-required-style css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="dbType"
                        title="数据源类型"
                      >
                        数据源类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="dbType_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="dbType_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="dbType_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="dbType"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-1uxy5k6"
                disabled=""
                type="button"
              >
                <span>
                  取 消
                </span>
              </button>
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-1uxy5k6"
                disabled=""
                type="button"
              >
                <span>
                  下 载
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
